Add addEmail
