# swagger.yaml
@@ -805,6 +805,48 @@ paths:
         - OAuth2_App: [ "admin", "super_admin" ]
         - OAuth2_Pass: [ "admin", "super_admin" ]
         - AccessToken: [ ]
+    post:
+      tags:
+        - "Email"
+      summary: "Add email"
+      description: "Create new email"
+      operationId: "addEmail"
+      parameters:
+        - in: "body"
+          name: "body"
+          description: "New email"
+          required: true
+          schema:
+            $ref: "#/definitions/new_email"
+      responses:
+        "201":
+          description: "Created"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/201"
+        "400":
+          description: "Bad Request"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/400"
+        "401":
+          description: "Unauthorized"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/401"
+        "404":
+          description: "Not Found"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/404"
+      security:
+        - OAuth2_App: [ "admin", "super_admin" ]
+        - OAuth2_Pass: [ "admin", "super_admin" ]
+        - AccessToken: [ ]
   /emails/{email_id}:
     get:
       tags:
@@ -1276,3 +1318,20 @@ definitions:
         example: "2000-01-01 00:00:00"
     xml:
       name: "email"
+  new_email:
+    type: "object"
+    required:
+      - title
+      - content
+    properties:
+      title:
+        type: "string"
+        example: "Title"
+      description:
+        type: "string"
+        example: "Description of the mail"
+      content:
+        type: "string"
+        example: "Content of the mail"
+    xml:
+      name: "new_email"
